--- a/src/ejs/h-point-ch.ejs
+++ b/src/ejs/h-point-ch.ejs
@@ -246,17 +246,17 @@
 				<ul class="data-list">
 					<!-- 앱 링크 이동 배너 -->
 					<li class="data-item">
-						<a href="https://www.h-point.co.kr/cma/invite.nhd?scheme=mgzCtgr?ctgrId=010" class="data-link">
+						<a href="hpoint://suglPtc?suglId=SUGL241105001&adminYn=Y" class="data-link">
 							<img src="./assets/images/h-point-christmas/contents-item-a.png" alt="# 1. 사운드 갤러리 크리스마스 ×더현대서울 현대백화점의 크리스마스 이야기">
 						</a>
 					</li>
 					<li class="data-item">
-						<a href="https://www.h-point.co.kr/cma/invite.nhd?scheme=mgzCtgr?ctgrId=006018" class="data-link">
+						<a href="hpoint://mgzPtc?mgzId=0000000957&adminYn=Y" class="data-link">
 							<img src="./assets/images/h-point-christmas/contents-item-b.png" alt="# 2. Edit. H 연말과 크리스마스의 분위기를 물씬 느낄 수 있는 공간 추천">
 						</a>
 					</li>
 					<li class="data-item">
-						<a href="https://www.h-point.co.kr/cma/invite.nhd?scheme=evntPtc?eventId=298707" class="data-link">
+						<a href="hpoint://evntPtc?eventId=306206" class="data-link">
 							<img src="./assets/images/h-point-christmas/contents-item-c.png" alt="# 3. 오디오북 크리스마스 이야기 어디까지 들어봤니? 소리로 읽는 행복한 크리스마스">
 						</a>
 					</li>
@@ -720,8 +720,8 @@
 				if (modalArea.classList.contains('day-9') ) {
 					modalBody.innerHTML = `
 						<ul class="bullet-list">
-							<li class="bullet-item">본 쿠폰은 40만원 이상 구매 시, 사용 가능합니다.</li>
-							<li class="bullet-item">지급된 혜택은 선물하기/전환/캐시백 등은 불가 합니다.</li>
+							<li class="bullet-item">본 쿠폰은 30만원 이상 구매 시, 사용 가능합니다.</li>
+							<li class="bullet-item">지급된 혜택은 선물하기/전환/캐시백 등은 불가합니다.</li>
 							<li class="bullet-item">혜택별 사용처/사용기준이 상이하므로, 사용 전 반드시 확인 바랍니다.</li>
 							<li class="bullet-item">지급된 혜택의 세부 내용은 하단의 혜택받기 버튼을 통해 확인 가능합니다.</li>
 						</ul>
@@ -827,11 +827,11 @@
 				modalBodyInnerText(); // day-? 별로 modal-body안에 다른 내용 삽입
 				imgNamingClass(); // 클래스 day-? 추출 후 이미지 파일명 설정
 
-				openNewVersionModal();	// 버전업모달
+				// openNewVersionModal();	// 버전업모달
 				// openAgreeModal();	// 동의모달
 				// openBoomModal();	// 꽝모달
 				// openOverlapModal();	// 중복참여모달
-				// openDayModal(); 	// 당첨모달
+				openDayModal(); 	// 당첨모달
 				// openDay24Modal(); 	// 24일 당첨모달
 				// loadingMarkShow(); // 로딩중 화면
 			})
