--- a/src/ejs/h-point-ch.ejs
+++ b/src/ejs/h-point-ch.ejs
@@ -792,6 +792,7 @@
 							<li class="bullet-item">포인트는 자동으로 적립되며, H.Point APP에서 확인 가능 합니다.</li>
 							<li class="bullet-item">하단의 혜택받기 클릭 시 H.Point 적립된 포인트를 확인 하실 수 있습니다.</li>
 							<li class="bullet-item">당첨 여부는 12월 31일(월) 개별 안내 예정입니다.</li>
+							<li class="bullet-item">Push 알림, 광고성 서비스 Push, 마케팅 수신 동의자 대상으로만 1천만P 추첨 예정입니다.</li>
 						</ul>
 					`;
 				}
@@ -831,8 +832,8 @@
 				// openAgreeModal();	// 동의모달
 				// openBoomModal();	// 꽝모달
 				// openOverlapModal();	// 중복참여모달
-				openDayModal(); 	// 당첨모달
-				// openDay24Modal(); 	// 24일 당첨모달
+				// openDayModal(); 	// 당첨모달
+				openDay24Modal(); 	// 24일 당첨모달
 				// loadingMarkShow(); // 로딩중 화면
 			})
 
