--- a/src/ejs/h-point-ch.ejs
+++ b/src/ejs/h-point-ch.ejs
@@ -409,7 +409,7 @@
                         <div class="modal-wrap">
 							<div class="modal-head">
 								<img src="./assets/images/h-point-christmas/modal-day-24-text.png" alt="">
-								<p class="summary">1천만P 당첨의 주인공은<br> <span class="accent">12/31(월) 앱에서 확인</span>할 수 있어요.</p>
+								<p class="summary">1천만P 당첨의 주인공은<br> <span class="accent">12/31(월) Push 안내</span> 예정이에요!</p>
 								<p class="summary">H.Point와 함께 따뜻한 연말 보내세요</p>
 							</div>
 							<div class="modal-figure">
@@ -789,7 +789,7 @@
 					modalBody.innerHTML = `
 						<ul class="bullet-list">
 							<li class="bullet-item">지급된 혜택은 선물하기/전환/캐시백 등은 불가 합니다.</li>
-							<li class="bullet-item">포인트는 자동으로 적립되며, H.Point APP에서 확인 가능 합니다.</li>
+							<li class="bullet-item">포인트는 자동으로 적립되며, H.Point APP에서 확인 가능합니다.</li>
 							<li class="bullet-item">하단의 혜택받기 클릭 시 H.Point 적립된 포인트를 확인 하실 수 있습니다.</li>
 							<li class="bullet-item">당첨 여부는 12월 31일(월) 개별 안내 예정입니다.</li>
 							<li class="bullet-item">Push 알림, 광고성 서비스 Push, 마케팅 수신 동의자 대상으로만 1천만P 추첨 예정입니다.</li>
