--- a/src/assets/scss/h-point-ch.scss
+++ b/src/assets/scss/h-point-ch.scss
@@ -932,7 +932,22 @@ button {
                                 .figure-item {
                                     position: absolute;
                                     &.item1 {
-                                        position: relative;
+                                        // position: relative;
+                                        width: 100%;
+                                        height: 100%;
+                                        top: 47.666vw;
+                                        bottom: 0;
+                                        left: 0;
+                                        right: 0;
+                                        padding-bottom: 100%;
+                                        img {
+                                            width: 57.5vw;
+                                            height: auto;
+                                            position: absolute;
+                                            top: -4vw;
+                                            left: 48%;
+                                            transform: translateX(-50%);
+                                        }
                                         &::after {
                                             position: absolute;
                                             top: 0;
@@ -954,7 +969,7 @@ button {
                                         animation: swing-up-down2 4s infinite ease-in-out;
                                     }
                                     &.item3 {
-                                        top: 41.6vw;
+                                        top: 44.6vw;
                                         right: 12vw;
                                         width: 12.266vw;
                                         animation: swing-up-down2 4s infinite ease-in-out;
