--- a/src/ejs/h-point-ch.ejs
+++ b/src/ejs/h-point-ch.ejs
@@ -8,6 +8,9 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	
 	<title>H포인트 크리스마스 이벤트</title>
+	<!-- gif 이미지 우선 로드 -->
+	<link rel="preload" href="./assets/images/h-point-christmas/modal-gift-box.gif" as="image" type="image/gif">
+
 	<link rel="stylesheet" type="text/css" href="./assets/css/h-point-ch.css">
 	<link rel="stylesheet" type="text/css" href="./assets/css/h-point-ch-font.css">
 	<script src="./assets/js/jquery.js"></script>
@@ -288,12 +291,12 @@
 		<!-- //팝업 늦게 열릴 시 로딩중 화면 노출 -->
 		
 		<!-- 팝업창 -->
-		<div class="modal-display" id="modalDisplay">
+		<div class="modal-display show" id="modalDisplay">
 			<!------------------------- 당첨 팝업 : design1 ------------------------->
-			<div class="modal design1">
+			<div class="modal design1 on">
 				<div class="modal-inner">
 					<!-- 출석체크 성공 선물 상자 팝업 -->
-					<div class="modal-area gift-box" id="giftBoxModal">
+					<div class="modal-area gift-box on" id="giftBoxModal">
 						<div class="modal-wrap">
 							<div class="modal-figure">
 								<div class="figure-list">
