feats: 250522 팝업 닫아놓음

--- a/src/ejs/h-point-ch.ejs
+++ b/src/ejs/h-point-ch.ejs
@@ -291,12 +291,12 @@
 		<!-- //팝업 늦게 열릴 시 로딩중 화면 노출 -->
 		
 		<!-- 팝업창 -->
-		<div class="modal-display show" id="modalDisplay">
+		<div class="modal-display" id="modalDisplay">
 			<!------------------------- 당첨 팝업 : design1 ------------------------->
-			<div class="modal design1 on">
+			<div class="modal design1">
 				<div class="modal-inner">
 					<!-- 출석체크 성공 선물 상자 팝업 -->
-					<div class="modal-area gift-box on" id="giftBoxModal">
+					<div class="modal-area gift-box" id="giftBoxModal">
 						<div class="modal-wrap">
 							<div class="modal-figure">
 								<div class="figure-list">
